--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,39 @@
-**/__pycache__/
-recognition/
-recordings/
-.env
-Test.py
+myScripts/Test.py
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.swp
 
+logs/
+*.log
+
+
+alembic/versions/*.pyc
+alembic/versions/__pycache__/
+alembic/env.pyc
+alembic/__pycache__/
+alembic/script.py.mako
+
+
+*.sqlite3
+*.db
+*.sql
+
+
+recordings/
+recognition/
+
+
+Lib/
+include/
+Scripts/
+pyvenv.cfg
+
+
+*.bak
+*.swp
+*.tmp
+*.err
+.DS_Store
+Thumbs.db
